--- a/src/styles/Animations.css
+++ b/src/styles/Animations.css
@@ -51,5 +51,43 @@
     width: 100%;
   }
   
+
+
+
+/* testimonial */
+/* General Styles for Testimonials */
+.testimonial {
+  opacity: 0.5;
+  transform: scale(0.5);
+  filter: blur(5px);
+  transition: all 0.5s ease;
+  transition-property: opacity, transform, filter;
+  display: flex;
+  justify-content: center;
   
-  
+}
+
+/* Active (Center) Testimonial */
+.testimonial.active {
+  opacity: 1;
+  transform: scale(1);
+  filter: blur(0);
+}
+
+/* Next and Previous (Left and Right) Testimonials */
+.testimonial.prev, .testimonial.next {
+  opacity: 0.5;
+  transform: scale(0.8);
+  filter: blur(5px);
+}
+
+/* Slider Container */
+#reviewSlider {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Keep the testimonials centered */
+  width: 100%;
+  /* overflow: hidden;          */
+  /* Hide overflow to keep everything within bounds */
+  position: relative;
+}
