feat:made some image format chnages and aligment and added hero section animations

--- a/src/styles/Animations.css
+++ b/src/styles/Animations.css
@@ -1,3 +1,29 @@
+/* hero animation */
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animate-shake {
+  animation: shake 3s ease-in-out infinite;
+}
+
+
+
+
 /* Container for the marquee */
 .overflow-hidden {
     overflow: hidden;
