feat:updated verify certificate and aboutpage

--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -7,15 +7,14 @@
 
     <!-- Desktop Navigation -->
     <div class="hidden md:flex space-x-9">
-        <a href="index.html" class="hover:text-[#ba9502] font-semibold text-[#ba9502] ">Home</a>
-        <a href="about.html" class="hover:text-[#ba9502] font-semibold ">About Us</a>
-        <a href="#features.html" class="hover:text-[#ba9502] font-semibold ">Features</a>
-        <a href="#pricing.html" class="hover:text-[#ba9502] font-semibold ">Pricing</a>
-        <a href="#verify.html" class="hover:text-[#ba9502] font-semibold ">Verify Certificate</a>
+        <a href="index.html" class="hover:text-[#ba9502] font-semibold  " id="active">Home</a>
+        <a href="about.html" class="hover:text-[#ba9502] font-semibold " id="active">About Us</a>
+        <a href="features.html" class="hover:text-[#ba9502] font-semibold " id="active">Features</a>
+        <a href="pricing.html" class="hover:text-[#ba9502] font-semibold " id="active">Pricing</a>
+        <a href="verify.html" class="hover:text-[#ba9502] font-semibold " id="active">Verify Certificate</a>
       </div>
       
-
-    <!-- Desktop Buttons -->
+<!-- Desktop Buttons -->
     <div class="hidden md:flex space-x-4">
       <a href="login.html"> 
         <button class="px-10 py-2 border border-amber-600 rounded-md font-semibold hover:bg-gradient-to-r from-[#e5c200] to-[#b99503]  hover:text-black transition duration-300 ease-in-out">Login</button>
@@ -40,7 +39,7 @@
         <a href="about.html" class="hover:text-amber-500">About Us</a>
         <a href="#features" class="hover:text-amber-500">Features</a>
         <a href="#pricing" class="hover:text-amber-500">Pricing</a>
-        <a href="#verify" class="hover:text-amber-500">Verify Certificate</a>
+        <a href="verify.html" class="hover:text-amber-500">Verify Certificate</a>
 
         <!-- Buttons -->
         <a href="login.html">
